--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -1,11 +1,12 @@
 name: Build and Push image to docker hub
 on:
-  push:
-    branches:
-      -main
-    paths:
-      - 'api/dockerfile'
-      - 'front-end-nextjs'
+  [workflow_dispatch]
+  # push:
+  #   branches:
+  #     -main
+  #   paths:
+  #     - 'api/dockerfile'
+  #     - 'front-end-nextjs'
 
 jobs:
   publish_images:
