--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -20,6 +20,6 @@ jobs:
           docker build ./front-end-nextjs -t taratrios/devops-nextjs:latest
       - name: push image to docker hub
         run: |
-          echo "${{ secrets.DOCKER_HUB_AUTH }}" | docker login -u taratrios --password-stdin
+          docker login -u taratrios --password-stdin {{ secrets.DOCKER_HUB_AUTH }}
           docker push taratrios/devops-qr-api:latest
           docker push taratrios/devops-nextjs:latest
