--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -18,8 +18,12 @@ jobs:
         run: |
           docker build ./api -t taratrios/devops-qr-api:latest
           docker build ./front-end-nextjs -t taratrios/devops-nextjs:latest
+      - name: Login to Docker
+        uses: docker/login-action@v3
+        with:
+          username: taratrios
+          password: ${{ secrets.DOCKER_HUB_AUTH }}
       - name: push image to docker hub
         run: |
-          docker login -u taratrios --password-stdin ${{ secrets.DOCKER_HUB_AUTH }}
           docker push taratrios/devops-qr-api:latest
           docker push taratrios/devops-nextjs:latest
